Added gh pages and build

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://GreenWorld0928.github.io/Ton_Counter",
+    "url": "https://GreenWorld0928.github.io/my-twa",
     "name": "My TWA",
-    "iconUrl": "https://GreenWorld0928.github.io/Ton_Counter/icon.png"
+    "iconUrl": "https://GreenWorld0928.github.io/my-twa/icon.png"
 }
